# meson-subproject-rc

./: main.c  meson.build
subprojects/sub/: meson.build  prog.c  prog.rc
